Mudanças no output

--- a/Bot_xadrez_básico.ipynb
+++ b/Bot_xadrez_básico.ipynb
@@ -23,7 +23,8 @@
       "source": [
         "import chess\n",
         "import random\n",
-        "import chess.polyglot"
+        "import chess.polyglot\n",
+        "from IPython.display import clear_output"
       ]
     },
     {
@@ -138,6 +139,8 @@
         "            jogar(board, lado_escolhido)\n",
         "        else:\n",
         "            jogadaOponente(board)\n",
+        "        clear_output()\n",
+        "        \n",
         "        display(board)\n",
         "\n",
         "    if board.is_checkmate():\n",
